rest api, zoom menu

--- a/client/main.less
+++ b/client/main.less
@@ -28,3 +28,10 @@ floatmenu {
     display: flex;
   }
 }
+
+.dropdown-content {
+  width: inherit !important;
+  li > a {
+    display: inline-flex;
+  }
+}
