method setViewerOrientation, display angles

--- a/client/main.less
+++ b/client/main.less
@@ -24,8 +24,9 @@ floatmenu {
     padding: 12px 24px;
   }
 
-  .status {
-    display: flex;
+  .status > div {
+    line-height: 13px;
+    font-size: 12px;
   }
 }
 
